--- a/estilos.css
+++ b/estilos.css
@@ -74,18 +74,19 @@ h3 {
     width: 100%;
 }
 
-
+/*Opinion: que el nav no este en lista, y sean botones, q hay que configurar bien bla bla*/
 #primeralista {
-    
+    display: flex;
+    justify-content: space-between;
     float: left;
-    opacity: 0.7;
-    padding-top: 20px;
-    margin-right: 0 auto;
+    /*opacity: 0.7;*/
+    padding: 1rem 1rem;
+    margin: 1rem 1rem;
     width: 100%;
-    height: 130px;
-    text-align: center;
+    height: 40px;
+    /*text-align: center;*/
     font-size: medium;
-    background-color: wheat;
+    background-color: rgba(236, 233, 227, 0.699);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 } 
 #iconos {
